--- a/index.htm
+++ b/index.htm
@@ -11,12 +11,11 @@ Released under the GPLv3 License
 <!--Here we create the letters T H R O W in span tag and color the background red-->
 <!--class="grav" means that gravity will pull it down -->
 <!--the center tags around these tags -->
-<span class="grav" style="background-color:red; font-size:80pt;">T</span>
-<span class="grav" style="background-color:red; font-size:80pt;">H</span>
-<span class="grav" style="background-color:red; font-size:80pt;">R</span>
-<span class="grav" style="background-color:red; font-size:80pt;">O</span>
-<span class="grav" style="background-color:red; font-size:80pt;">W</span>
-</center>
+<span class="grav" style="background-color:blue; font-size:80pt;">M</span>
+<span class="grav" style="background-color:red; font-size:60pt;">A</span>
+<span class="grav" style="background-color:blue; font-size:80pt;">T</span>
+<span class="grav" style="background-color:red; font-size:60pt;">T</span>
+
 
 
 <!--Here we make a solid platform-->
